manifest/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: pieapp-service
spec:
  type: NodePort
  selector:
    app: fiber-test
  ports:
    
port: 80
    targetPort: 8005
    nodePort: 30080
